--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
         android:theme="@style/Theme.AppQuanLyPhongTro"
         tools:targetApi="31">
         <activity
+            android:name=".Main_Add_Khach_Thue"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,9 +28,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.MaterialComponents.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.MaterialComponents.NoActionBar"></activity>
     </application>
 
 </manifest>
